rust/tests/snapshots/test_from_file__scientific_notation_2.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 0.015
      - name: x2
        value: 3200
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 0.21
      - name: x2
        value: 10
    operator: LTE
    rhs: 1000
  - type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 1
      - name: x2
        value: 1
    operator: GTE
    rhs: 0
variables:
  - name: x1
    kind: Continuous
    bounds:
      lower: -inf
      upper: inf
  - name: x2
    kind: Continuous
    bounds:
      lower: 0
      upper: inf
