rust/tests/snapshots/test_from_file__semi_continuous.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: OBJ1
    coefficients:
      - name: b_5829890_x2
        value: 1
      - name: b_5880854_x2
        value: 1
    constant: 0
constraints:
  - type: Standard
    name: C1
    coefficients:
      - name: b_5829890_x2
        value: -2
      - name: b_5829890_x1
        value: 2
    operator: LTE
    rhs: -64
  - type: Standard
    name: C2
    coefficients:
      - name: b_5880854_x2
        value: 1
      - name: b_5880854_x1
        value: -1
    operator: GTE
    rhs: 32
variables:
  - name: b_5829890_x1
    kind: Binary
    bounds:
      lower: 10
      upper: ~
  - name: b_5829890_x2
    kind: General
    bounds:
      lower: 1014
      upper: 1917
  - name: b_5880854_x1
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: b_5880854_x2
    kind: SemiInteger
    bounds:
      lower: 1014
      upper: 1917
  - name: x1
    kind: SemiContinuous
    bounds:
      lower: ~
      upper: ~
  - name: x2
    kind: SemiContinuous
    bounds:
      lower: ~
      upper: ~
  - name: x3
    kind: SemiContinuous
    bounds:
      lower: ~
      upper: ~
