rust/tests/snapshots/test_from_file__sos.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Maximize
objectives:
  - name: obj
    coefficients:
      - name: V4
        value: -1
      - name: V5
        value: 1
    constant: 0
constraints:
  - type: Sos
    name: csos1
    sos_type: S1
    weights:
      - name: V1
        value: 1
      - name: V3
        value: 2
      - name: V5
        value: 3
  - type: Sos
    name: csos2
    sos_type: S2
    weights:
      - name: V2
        value: 2
      - name: V4
        value: 1
      - name: V5
        value: 2.5
  - type: Standard
    name: CON1
    coefficients:
      - name: V1
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: CON2
    coefficients:
      - name: V2
        value: 1
    operator: GTE
    rhs: 2
  - type: Standard
    name: CON3
    coefficients:
      - name: V3
        value: 1
    operator: LTE
    rhs: 2.5
  - type: Standard
    name: CON4
    coefficients:
      - name: V5
        value: 1
      - name: V6
        value: 1
      - name: V7
        value: 1
    operator: LTE
    rhs: 1
variables:
  - name: V1
    kind: Continuous
    bounds:
      lower: -inf
      upper: 3
  - name: V2
    kind: Continuous
    bounds:
      lower: -inf
      upper: 3
  - name: V3
    kind: Continuous
    bounds:
      lower: -inf
      upper: 3
  - name: V4
    kind: General
    bounds:
      lower: 5.5
      upper: inf
  - name: V5
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: V6
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: V7
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: V8
    kind: Binary
    bounds:
      lower: 0
      upper: 1
