rust/tests/snapshots/test_from_file__whiskas_model_2.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: The_Whiskas_Problem
sense: Minimize
objectives:
  - name: Total_Cost_of_Ingredients_per_can
    coefficients:
      - name: Ingr_BEEF
        value: 0.008
      - name: Ingr_CHICKEN
        value: 0.013
      - name: Ingr_GEL
        value: 0.001
      - name: Ingr_MUTTON
        value: 0.01
      - name: Ingr_RICE
        value: 0.002
      - name: Ingr_WHEAT
        value: 0.005
    constant: 0
constraints:
  - type: Standard
    name: FatRequirement
    coefficients:
      - name: Ingr_BEEF
        value: 0.1
      - name: Ingr_CHICKEN
        value: 0.08
      - name: Ingr_MUTTON
        value: 0.11
      - name: Ingr_RICE
        value: 0.01
      - name: Ingr_WHEAT
        value: 0.01
    operator: GTE
    rhs: 6
  - type: Standard
    name: FibreRequirement
    coefficients:
      - name: Ingr_BEEF
        value: 0.005
      - name: Ingr_CHICKEN
        value: 0.001
      - name: Ingr_MUTTON
        value: 0.003
      - name: Ingr_RICE
        value: 0.1
      - name: Ingr_WHEAT
        value: 0.15
    operator: LTE
    rhs: 2
  - type: Standard
    name: PercentagesSum
    coefficients:
      - name: Ingr_BEEF
        value: 1
      - name: Ingr_CHICKEN
        value: 1
      - name: Ingr_GEL
        value: 1
      - name: Ingr_MUTTON
        value: 1
      - name: Ingr_RICE
        value: 1
      - name: Ingr_WHEAT
        value: 1
    operator: EQ
    rhs: 100
  - type: Standard
    name: ProteinRequirement
    coefficients:
      - name: Ingr_BEEF
        value: 0.2
      - name: Ingr_CHICKEN
        value: 0.1
      - name: Ingr_MUTTON
        value: 0.15
      - name: Ingr_WHEAT
        value: 0.04
    operator: GTE
    rhs: 8
  - type: Standard
    name: SaltRequirement
    coefficients:
      - name: Ingr_BEEF
        value: 0.005
      - name: Ingr_CHICKEN
        value: 0.002
      - name: Ingr_MUTTON
        value: 0.007
      - name: Ingr_RICE
        value: 0.002
      - name: Ingr_WHEAT
        value: 0.008
    operator: LTE
    rhs: 0.4
variables:
  - name: Ingr_BEEF
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Ingr_CHICKEN
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Ingr_GEL
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Ingr_MUTTON
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Ingr_RICE
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Ingr_WHEAT
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
